# RTYPE

./: .gitignore  CMakeLists.txt  RTYPE.kdev4  RTYPE.sln  uml.xmi
.kdev4/: RTYPE.kdev4
common/: IBus.h  bus.cpp  bus.h  common.h  messages.h  module.h  templatedTools.h
data/: Bydos1.xcf  Field.xcf  Player.xcf
engine/: CMakeLists.txt  Engine.cpp  Engine.h  Worker.cpp  bus.cpp  bus.h
module_bydos1/: CMakeLists.txt  Module_Bydos1.cpp  Module_Bydos1.h  local.h  msg.h
module_config/: CMakeLists.txt  Module_Config.cpp  Module_Config.h  local.cpp  local.h  msg.h
module_game/: Bydos.cpp  CMakeLists.txt  Drawable.cpp  Game.cpp  Module_Game.cpp  Module_Game.h  Player.cpp  local.h
module_network/: CMakeLists.txt  Module_Network.cpp  Module_Network.h  local.cpp  local.h  module_network.vcxproj  msg.h  rfc.txt
module_sfml/: CMakeLists.txt  Module_SFML.cpp  Module_SFML.h  local.h  msg.h
module_tick/: CMakeLists.txt  Module_Tick.cpp  Module_Tick.h  local.h  msg.h
rtype_client/: CMakeLists.txt  main.cpp  rtype_client.vcxproj  rtype_client.vcxproj.filters
rtype_server/: CMakeLists.txt  main.cpp  rtype_server.vcxproj  rtype_server.vcxproj.filters
