cmake_minimum_required (VERSION 3.5)
project (RTYPE)
if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
endif(CMAKE_COMPILER_IS_GNUCXX)
add_subdirectory(module_network)
add_subdirectory(rtype_client)
add_subdirectory(rtype_server)
add_subdirectory(engine)