cmake_minimum_required (VERSION 3.5)
project (RTYPE)
if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
else(CMAKE_COMPILER_IS_GNUCXX)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
endif(CMAKE_COMPILER_IS_GNUCXX)
add_subdirectory(module_network)
add_subdirectory(module_game)
add_subdirectory(module_config)
add_subdirectory(module_tick)
add_subdirectory(module_sfml)
add_subdirectory(rtype_client)
add_subdirectory(rtype_server)
add_subdirectory(engine)