add_library(module_sfml SHARED Module_SFML.cpp local.cpp)
if(CMAKE_COMPILER_IS_GNUCXX)
	target_link_libraries(module_sfml sfml-graphics sfml-window sfml-system)
elseif(WIN32)
	set(SFML_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.3.2")
	set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH}) 
	find_package(SFML 2 REQUIRED system window graphics network audio)
	target_link_libraries(module_sfml ${SFML_LIBRARIES})
	include_directories(${SFML_INCLUDE_DIR})
endif(CMAKE_COMPILER_IS_GNUCXX)
